--- a/index.html
+++ b/index.html
@@ -4,41 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../css/sample.css">
+  <link rel="stylesheet" href="./css/sample.css">
   <title>じゃんけん</title>
 </head>
 
 
 <body>
     <header>
-        <img id="mypic" onclick="slideshow()" src="../img/1.jpg">
+        <img id="mypic" onclick="slideshow()" src="./img/1.jpg">
     </header>
 <main>
     <ul>
-        <li id="gu_btn"><img src="../img/rock.jpg" width="450" height="500"alt="rock"></li>
-        <li id="par_btn"><img src="../img/paper.jpg"alt="paper"></li>
-        <li id="cho_btn"><img src="../img/scissors.jpg"alt="scissors"></li>
+        <li id="gu_btn"><img src="./img/rock.jpg" width="450" height="500"alt="rock"></li>
+        <li id="par_btn"><img src="./img/paper.jpg"alt="paper"></li>
+        <li id="cho_btn"><img src="./img/scissors.jpg"alt="scissors"></li>
     </ul>
  <div id="com_hand">
     <img id="cpu" src="../img/hand of the computer.jpg"alt="Hand of the computer">
  </div>
     <div>
-    <img id="CP_pa" class="POP" src="../img/CP_paper.jpg"alt="">
-    <img id="CP_ro" class="POP" src="../img/CP_rock.jpg"alt="">
-    <img id="CP_sc" class="POP" src="../img/CP_scissors.jpg"alt="">
+    <img id="CP_pa" class="POP" src="./img/CP_paper.jpg"alt="">
+    <img id="CP_ro" class="POP" src="./img/CP_rock.jpg"alt="">
+    <img id="CP_sc" class="POP" src="./img/CP_scissors.jpg"alt="">
     </div>
 <div id="judgment">
-        <img src="../img/result.jpg"alt="result">
+        <img src="./img/result.jpg"alt="result">
 </div>
 <div>
-    <img id="lo" class="POP" src="../img/loss.jpg"alt="">
-    <img id="wi" class="POP" src="../img/win.jpg"alt="">
-    <img id="dr" class="POP" src="../img/draw.jpg"alt="">
+    <img id="lo" class="POP" src="./img/loss.jpg"alt="">
+    <img id="wi" class="POP" src="./img/win.jpg"alt="">
+    <img id="dr" class="POP" src="./img/draw.jpg"alt="">
 </div>
 </main>
 
     <footer>
-        <img src="../img/footer.jpg"alt="footer">
+        <img src="./img/footer.jpg"alt="footer">
     </footer>
      
     
@@ -94,7 +94,7 @@
 });
 </script>
 <script>
-        var pics_src = new Array("../img/1.jpg","../img/start.jpg");
+        var pics_src = new Array("./img/1.jpg","./img/start.jpg");
         var num = 0;
 
         function slideshow(){
